--- a/netflix clone2/netflixclone.html.html
+++ b/netflix clone2/netflixclone.html.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="description" content="Hello this is my first web page!." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="C:\Users\HP PC\.vscode\netflix clone2\netflix.clone.css.css" />
+    <link rel="stylesheet" href="netflix clone2/netflix.clone.css.css" />
     <link
       rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
@@ -326,6 +326,6 @@
       </div>
     </footer>
             
-    <script src="C:\Users\HP PC\.vscode\netflix clone copy\netflix.clone.js.js"></script>
+    <script src="netflix clone2/netflix.clone.js.js"></script>
   </body>
 </html>
